[package]
name = "washed_up"
version = "0.1.0"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
description = "A toy actor library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mnussbaum/washed_up"
keywords = ["actor", "concurrency"]


[dependencies]

coio = { git = "https://github.com/zonyitoo/coio-rs.git" }
log = "0.3.1"
rustc-serialize = "0.3"
time = "0.1.32"
uuid = "0.1"

[lib]
path = "src/lib.rs"
test = true

[[test]]
name = "test"
path = "test/test.rs"
