[package]
name = "washed_up"
version = "0.1.0"
authors = ["mnussbaum <michaelnussbaum08@gmail.com>"]
description = "A toy actor library"
readme = "README.md"
license = "MIT"
repository = "https://github.com/mnussbaum/washed_up"
keywords = ["actor", "concurrency"]


[dependencies]
coros = { git = "https://github.com/mnussbaum/coros.git" }
log = "0.3.1"
rustc-serialize = "0.3"
time = "0.1.32"
uuid = "0.1.18"

[lib]
path = "src/lib.rs"
test = true

[[test]]
name = "test"
path = "test/test.rs"
